# End-to-End-Machine-Learning-Project-using-uv-and-AWS-deployment-to-House-Prices

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: 01 load data.ipynb  02 EDA and Cleaning.ipynb  03 Feature_Engineering_and_Encoding.ipynb  04 Preprocessing.ipynb  05 Model_Training.ipynb  06 Model_Training_wtout_scaling.ipynb  07 Hyperparameter_tuning_with_optuna.ipynb
src/: 01_data_loader.py  02_data_cleaning.py  03_feature_engineering.py  04_preprocessing_with_vif.py  05_model_training.py  06_hyperparameter_tuning.py  __init__.py  data_loader.py  inference_pipeline.py
test_workflow/: test_load_data.py
