[project]
name = "ml-with-uv-e2e"
version = "0.1.0"
description = "End-to-End Machine Learning Project with uv to predict House Prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "category-encoders>=2.9.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.7.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.1.2",
]
